# pygrammer

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  ROADMAP.md  project.toml  pyproject.toml
examples/grammars/: lang1.txt
pygrammer/: __main__.py
pygrammer/core/: grammar.py  parser.py  templates.py
src/pygrammer/: __main__.py  todo.txt
src/pygrammer/core/: generator.py  grammar.py  parser.py  templates.py
